[project]
name = "smb-pyfuse"
version = "0.1.0"
description = "FUSE filesystem backed by smbclient (smbprotocol)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "fuse-python>=1.0.9",
    "gssapi>=1.11.1",
    "krb5>=0.9.0",
    "smbprotocol[kerberos]>=1.16.1",
]

[project.scripts]
smb-pyfuse = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["smb_pyfuse*"]
