[project]
name = "smb-pyfuse"
version = "0.3.0"
description = "FUSE filesystem backed by smbclient (smbprotocol)"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "argparse>=1.4.0",
    "fuse-python>=1.0.9; platform_system == 'Linux'",
    "gssapi>=1.11.1; platform_system == 'Linux'",
    "krb5>=0.9.0; platform_system == 'Linux'",
    "smbprotocol[kerberos]>=1.16.1",
]

[project.scripts]
smb-pyfuse = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["smb_pyfuse*"]
